fix spacing

--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ body, html {
 }
 
 #yesNo {
+    margin-top: 240px;
     text-align: center;
 }
 
